--- a/appsettings.json
+++ b/appsettings.json
@@ -1,34 +1,102 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "Config": {
-    "time": "00:30:00",
-    "days": [
-      "L",
-      "M",
-      "M",
-      "J",
-      "V"
-    ],
-    "path": "",
-    "data": [
+  "WorkerService": {
+    "time_limit1": "00:30:00",
+    "time_limit2": "00:59:59",
+    "submit_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[3]/div/button",
+    "elements": [
       {
-        "txtNumPermiso": "8899",
-        "txtNumRadioEjec": "456",
-        "txtEmpresa": "ejemplo SAS",
-        "numEjecutantes": 5,
-        "txtHora": "16:00"
+        "idElement": 1,
+        "nameElement": "Número de permiso J5",
+        "xpathElement": "//*[@id=\"question-list\"]/div[1]/div[2]/div/span/input",
+        "action": "type"
       },
       {
-        "txtNumPermiso": "11111",
-        "txtNumRadioEjec": "456",
-        "txtEmpresa": "ejemplo SAS",
-        "numEjecutantes": 5,
-        "txtHora": "16:00"
+        "idElement": 2,
+        "nameElement": "Área",
+        "xpathElement": "//*[@id=\"question-list\"]/div[2]/div[2]/div/div/div[3]/div/label/span[1]/input",
+        "action": "click"
+      },
+      {
+        "idElement": 3,
+        "nameElement": "Número de Radio Ejecutor",
+        "xpathElement": "//*[@id=\"question-list\"]/div[3]/div[2]/div/span/input",
+        "action": "type"
+      },
+      {
+        "idElement": 4,
+        "nameElement": "Empresa",
+        "xpathElement": "//*[@id=\"question-list\"]/div[4]/div[2]/div/div[2]/label/div/span/input",
+        "action": "type"
+      },
+      {
+        "idElement": 5,
+        "nameElement": "Número de Ejecutantes",
+        "xpathElement": "//*[@id=\"question-list\"]/div[5]/div[2]/div/div[2]/label/div/span/input",
+        "action": "type"
+      },
+      {
+        "idElement": 6,
+        "nameElement": "Hora Finalización Actividad",
+        "xpathElement": "//*[@id=\"question-list\"]/div[6]/div[2]/div/div[1]/div[3]/div/label/span[1]/input",
+        "action": "click"
+      }
+    ],
+    "data": [
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "8899"
+          },
+          {
+            "elementId": "2",
+            "text": "456"
+          },
+          {
+            "elementId": "3",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "4",
+            "text": "5"
+          },
+          {
+            "elementId": "5",
+            "text": "10"
+          },
+          {
+            "elementId": "6",
+            "text": "16:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "8899"
+          },
+          {
+            "elementId": "2",
+            "text": "456"
+          },
+          {
+            "elementId": "3",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "4",
+            "text": "5"
+          },
+          {
+            "elementId": "5",
+            "text": "5"
+          },
+          {
+            "elementId": "6",
+            "text": "16:00"
+          }
+        ]
       }
     ]
   }
