estable 1.1 Se agrega log Se agrega validación con hora Se agrega Cancelación de la ejecución al terminar

--- a/FormService.csproj
+++ b/FormService.csproj
@@ -5,7 +5,12 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>dotnet-FormService-66e6e2e5-9d32-49c4-a497-4a0f1eb7ff74</UserSecretsId>
+    <ApplicationIcon>icono_formulario.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="icono_formulario.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
