--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "WorkerService": {
-    "time_limit1": "00:30:00",
-    "time_limit2": "00:59:59",
+    "time_limit1": "13:07:00",
+    "time_limit2": "13:59:59",
     "submit_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[3]/div/button",
     "elements": [
       {
@@ -37,8 +37,8 @@
       {
         "idElement": 6,
         "nameElement": "Hora Finalización Actividad",
-        "xpathElement": "//*[@id=\"question-list\"]/div[6]/div[2]/div/div[1]/div[3]/div/label/span[1]/input",
-        "action": "click"
+        "action": "type",
+        "xpathElement": "//*[@id=\"question-list\"]/div[6]/div[2]/div/div[2]/label/div/span/input"
       }
     ],
     "data": [
@@ -50,11 +50,11 @@
           },
           {
             "elementId": "2",
-            "text": "456"
+            "text": ""
           },
           {
             "elementId": "3",
-            "text": "PETROLABIN"
+            "text": "PRUEBA SAS"
           },
           {
             "elementId": "4",
@@ -78,7 +78,7 @@
           },
           {
             "elementId": "2",
-            "text": "456"
+            "text": ""
           },
           {
             "elementId": "3",
@@ -90,11 +90,11 @@
           },
           {
             "elementId": "5",
-            "text": "5"
+            "text": "10"
           },
           {
             "elementId": "6",
-            "text": "16:00"
+            "text": "18:00"
           }
         ]
       }
