parametrización de tiempo de espera al cargarla página

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,7 @@
   "WorkerService": {
     "time_limit1": "13:07:00",
     "time_limit2": "13:59:59",
+    "time_to_wait": 5,
     "url": "https://forms.office.com/Pages/ResponsePage.aspx?id=qNNG1hV7U0udkpgV_WJwLCfVP6r0EmVGnBeu-bvLR8VUNDlCNUVZNTFETTlWUjRKQjlYRTNSQzExSi4u",
     "submit_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[3]/div/button",
     "elements": [
