Se agrega Wait de selenium Se agrega screenshot al iniciar y al finalizar Se agrega lógica para elegir área

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "WorkerService": {
-    "time_limit1": "13:07:00",
-    "time_limit2": "13:59:59",
-    "time_to_wait": 5,
+    "time_limit1": "22:01:00",
+    "time_limit2": "23:59:59",
+    "time_to_wait": 2,
     "url": "https://forms.office.com/Pages/ResponsePage.aspx?id=qNNG1hV7U0udkpgV_WJwLCfVP6r0EmVGnBeu-bvLR8VUNDlCNUVZNTFETTlWUjRKQjlYRTNSQzExSi4u",
     "submit_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[3]/div/button",
     "elements": [
@@ -15,7 +15,7 @@
       {
         "idElement": 2,
         "nameElement": "Área",
-        "xpathElement": "//*[@id=\"question-list\"]/div[2]/div[2]/div/div/div[3]/div/label/span[1]/input",
+        "xpathElement": "//*[@id=\"question-list\"]/div[2]/div[2]/div/div/div[_VARIABLE_]/div/label/span[1]/input",
         "action": "click"
       },
       {
@@ -48,27 +48,27 @@
         "dataElements": [
           {
             "elementId": "1",
-            "text": "8899"
+            "text": "001"
           },
           {
             "elementId": "2",
-            "text": ""
+            "text": "2"
           },
           {
             "elementId": "3",
-            "text": "PRUEBA SAS"
+            "text": "321003"
           },
           {
             "elementId": "4",
-            "text": "5"
+            "text": "PETROLABIN"
           },
           {
             "elementId": "5",
-            "text": "10"
+            "text": "3"
           },
           {
             "elementId": "6",
-            "text": "16:00"
+            "text": "18:00"
           }
         ]
       },
@@ -76,23 +76,191 @@
         "dataElements": [
           {
             "elementId": "1",
-            "text": "8899"
+            "text": "002"
           },
           {
             "elementId": "2",
-            "text": ""
+            "text": "4"
           },
           {
             "elementId": "3",
-            "text": "PETROLABIN"
+            "text": "321003"
           },
           {
             "elementId": "4",
-            "text": "5"
+            "text": "PETROLABIN"
           },
           {
             "elementId": "5",
-            "text": "10"
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "003"
+          },
+          {
+            "elementId": "2",
+            "text": "6"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "004"
+          },
+          {
+            "elementId": "2",
+            "text": "7"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "005"
+          },
+          {
+            "elementId": "2",
+            "text": "8"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "006"
+          },
+          {
+            "elementId": "2",
+            "text": "1"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "007"
+          },
+          {
+            "elementId": "2",
+            "text": "3"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
+          },
+          {
+            "elementId": "6",
+            "text": "18:00"
+          }
+        ]
+      },
+      {
+        "dataElements": [
+          {
+            "elementId": "1",
+            "text": "008"
+          },
+          {
+            "elementId": "2",
+            "text": "7"
+          },
+          {
+            "elementId": "3",
+            "text": "321003"
+          },
+          {
+            "elementId": "4",
+            "text": "PETROLABIN"
+          },
+          {
+            "elementId": "5",
+            "text": "3"
           },
           {
             "elementId": "6",
