se agrega funcion para iniciar sesion

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,22 @@
 {
   "WorkerService": {
-    "time_limit1": "22:01:00",
+    "time_limit1": "00:01:00",
     "time_limit2": "23:59:59",
     "time_to_wait": 2,
     "url": "https://forms.office.com/Pages/ResponsePage.aspx?id=qNNG1hV7U0udkpgV_WJwLCfVP6r0EmVGnBeu-bvLR8VUNDlCNUVZNTFETTlWUjRKQjlYRTNSQzExSi4u",
     "submit_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[3]/div/button",
+    "save_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[1]/div[2]/div[4]/div/button",
+    "account": {
+      "url_form": "https://go.microsoft.com/fwlink/p/?LinkID=2115709&clcid=0x409&culture=en-us&country=us",
+      "email": "",
+      "password": "",
+      "email_element": "//*[@id=\"placeholder\"]/div[2]/div/input",
+      "email_btn_element": "//*[@id=\"placeholder\"]/div[4]/input",
+      "password_element": "//*[@id=\"i0118\"]",
+      "password_btn_element": "//*[@id=\"idSIButton9\"]",
+      "session_check_element": "//*[@id=\"KmsiCheckboxField\"]",
+      "session_btn_element": "//*[@id=\"idSIButton9\"]"
+    },
     "elements": [
       {
         "idElement": 1,
