--- a/appsettings.json
+++ b/appsettings.json
@@ -8,14 +8,7 @@
     "save_button": "//*[@id=\"form-main-content1\"]/div/div/div[2]/div[1]/div[2]/div[4]/div/button",
     "account": {
       "url_form": "https://go.microsoft.com/fwlink/p/?LinkID=2115709&clcid=0x409&culture=en-us&country=us",
-      "email": "",
-      "password": "",
-      "email_element": "//*[@id=\"placeholder\"]/div[2]/div/input",
-      "email_btn_element": "//*[@id=\"placeholder\"]/div[4]/input",
-      "password_element": "//*[@id=\"i0118\"]",
-      "password_btn_element": "//*[@id=\"idSIButton9\"]",
-      "session_check_element": "//*[@id=\"KmsiCheckboxField\"]",
-      "session_btn_element": "//*[@id=\"idSIButton9\"]"
+      "time_to_wait": 60
     },
     "elements": [
       {
